# XynPro-Initializer

./: .gitignore  Cargo.toml  README.md  main.rs
src/: main.rs  omnixerror.rs
tests/: xynsrc.txt
